--- a/courses/2740/boston/scss/_small.scss
+++ b/courses/2740/boston/scss/_small.scss
@@ -195,7 +195,7 @@ nav {
 
         a {
         text-decoration: none;
-        color: $textColor;
+        color: black;
         }
     }
 
